--- a/package.json
+++ b/package.json
@@ -17,13 +17,16 @@
     "@types/http-errors": "^1.8.2",
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.25",
+    "@types/socket.io": "^3.0.2",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
+    "ejs": "^3.1.7",
     "express": "^4.17.3",
     "http-errors": "^2.0.0",
     "joi": "^17.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
+    "socket.io": "^4.5.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
