--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.25",
     "@types/socket.io": "^3.0.2",
+    "@types/stripe": "^8.0.417",
     "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "ejs": "^3.1.7",
@@ -27,6 +28,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "socket.io": "^4.5.0",
+    "stripe": "^8.219.0",
     "typescript": "^4.6.3"
   },
   "devDependencies": {
